<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".A2">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre71"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res71"
                    android:maxLines="10"

                    android:layout_width="match_parent"
                    android:layout_height="200dp"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre81"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rGroup81"
                    android:paddingBottom="10dp">
                    <RadioButton
                        android:id="@+id/rButton351"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pre811"/>
                    <RadioButton
                        android:id="@+id/rButton352"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/pre812"/>



                </RadioGroup>



            </LinearLayout>


        </LinearLayout>

    </ScrollView>
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="bottom"

        >

        <Button
            android:id="@+id/btnBackA6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btnBack"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            />

        <Button
            android:id="@+id/btnSiguienteA6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/btnNext"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            />

    </android.support.constraint.ConstraintLayout>



</LinearLayout>