<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".A2">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre61"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res61"
                    android:maxLines="1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre62"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res62"
                    android:maxLines="3"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"

                    />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre63"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res63"
                    android:maxLines="3"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre64"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res64"
                    android:maxLines="3"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre65"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res65"
                    android:maxLines="1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp" />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre66"
                    android:textSize="20sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res66"
                    android:maxLines="1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp" />







            </LinearLayout>

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <Button
                    android:id="@+id/btnBackA5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/btnBack"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    />

                <Button
                    android:id="@+id/btnSiguienteA5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/btnNext"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    />

            </android.support.constraint.ConstraintLayout>


        </LinearLayout>

    </ScrollView>



</LinearLayout>