<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dialog_margin"
        android:layout_marginRight="@dimen/dialog_margin"
        android:orientation="vertical">


            <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNombre"
            style="@style/AppTheme.TextInputLayoutForm"
            android:hint="@string/nombreApiario"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nombreText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutNumero"
            style="@style/AppTheme.TextInputLayoutForm"
            android:hint="@string/numeroApiario"
            app:counterEnabled="true"
            app:counterMaxLength="10">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/numeroText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayoutRendimiento"
            style="@style/AppTheme.TextInputLayoutForm"
            android:hint="@string/rendimientoApiario"
            app:counterEnabled="true"
            app:counterMaxLength="30">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/rendimientoText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLength="30"
                android:maxLines="1"/>

        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</ScrollView>