<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".A2">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp">

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre31"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res31"
                    android:maxLines="1"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"

                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre32"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res32"
                    android:maxLines="2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="20dp"
                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre33"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res33"
                    android:maxLines="2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="20dp"
                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre34"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res34"
                    android:maxLines="2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="20dp"
                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre35"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rGroup35">
                    <RadioButton
                        android:id="@+id/rButton351"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="0-2"/>
                    <RadioButton
                        android:id="@+id/rButton352"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="3-4"/>
                    <RadioButton
                        android:id="@+id/rButton353"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="5-6"/>
                    <RadioButton
                        android:id="@+id/rButton354"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="7 o más. Describa: "/>

                    <EditText
                        android:id="@+id/resOtro355"
                        android:focusable="false"
                        android:clickable="false"
                        android:maxLines="1"

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"

                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginBottom="20dp"
                        />

                </RadioGroup>
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre36"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/rGroup36"
                    android:paddingBottom="10dp">
                    <RadioButton
                        android:id="@+id/rButton361"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Suministrada por laorganización"/>
                    <RadioButton
                        android:id="@+id/rButton362"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Opérculos de su colmenar"/>
                    <RadioButton
                        android:id="@+id/rButton363"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Adquiridas"/>


                </RadioGroup>
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre37"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res37"
                    android:maxLines="2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="20dp"
                    />
                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pre38"
                    android:textSize="20dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:paddingBottom="10dp"/>
                <EditText
                    android:id="@+id/res38"
                    android:maxLines="2"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginLeft="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="20dp"
                    />





                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <Button
                        android:id="@+id/btnBackA3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="Atras"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        />

                    <Button
                        android:id="@+id/btnSiguienteA3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:text="Siguiente"
                        android:textSize="18sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        />

                </android.support.constraint.ConstraintLayout>



            </LinearLayout>
        </LinearLayout>

    </ScrollView>


</LinearLayout>